<resources>
    <string name="app_name">Aqua Companion</string>
    <string name="version_no">Version - 1.0.1</string>
    <string name="pref_notification_message_value">Hey! Lets drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you.</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="workout_hint">You daily work out time in min/day</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to
        survive.
    </string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and
        make you tired.
    </string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.
    </string>
    <string name="update">Update</string>
    <string name="edit_your_info">Edit Your Info</string>
    <string name="enter_your_weight_in_kg">Enter your weight in Kg</string>
    <string name="your_daily_work_time_in_min_day">Your daily work time in min/day</string>
    <string name="your_wake_up_time">Your wake up time</string>
    <string name="your_sleep_time">Your Sleep time</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_message">Notification message</string>
    <string name="notification_tone">Notification tone</string>
    <string name="notification_frequency">Notification Frequency</string>
    <string name="intake_report">Intake Report</string>
    <string name="summary">Summary</string>
    <string name="information_icon">Information Icon</string>
    <string name="back_button_imageview">Back button imageview</string>
    <string name="daily_drink_target">Daily Drink Target</string>
    <string name="remaining">Remaining</string>
    <string name="_1100_ml">1100 ml</string>
    <string name="target">Target</string>
    <string name="_3100_ml">3100 ml</string>
    <string name="theme">Theme</string>

    <string name="ratingMessage">Hey,you seem to like this app, You would help us a great deal with a 5 star rating!
    </string>
    <string name="cartilage_found_in_joints_and_the_disks_of_the_spine_contains_around_80_percent_water_long_term_dehydration_can_reduce_the_joints_shock_absorbing_ability_leading_to_joint_pain">
        Cartilage, found in joints and the disks of the spine, contains around 80 percent water. Long-term dehydration
        can reduce the joints\' shock-absorbing ability, leading to joint pain
    </string>
    <string name="more_free_apps">More Free Apps</string>
    <string name="like_this_app_buy_me_a_coffee">Like this app ? Buy me a Coffee.</string>

</resources>
