<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_activity_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_app_bg"
        tools:context="com.sudoware.aqua.reminder.StatsActivity">
    <com.github.mikephil.charting.charts.LineChart
            android:padding="8dp"
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
            android:background="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_arrow_circle_left_solid"
            android:id="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="294dp"
            android:contentDescription="@string/back_button_imageview"/>


    <ImageButton
            android:background="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_info_white_24dp"
            android:id="@+id/btnInfo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="275dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/information_icon"/>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:id="@+id/cardView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/summaryHeadingTextView">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/waveConstrantLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <me.itangqi.waveloadingview.WaveLoadingView
                    android:id="@+id/waterLevelView"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    app:wlv_borderColor="@color/colorSecondaryLighter"
                    app:wlv_borderWidth="8dp"
                    app:wlv_progressValue="70"
                    app:wlv_shapeType="circle"
                    app:wlv_round_rectangle="true"
                    app:wlv_triangle_direction="north"
                    app:wlv_titleCenterStrokeColor="@android:color/holo_blue_dark"
                    app:wlv_titleCenterStrokeWidth="3dp"
                    app:wlv_titleCenter="40%"
                    app:wlv_titleCenterColor="@color/colorWhite"
                    app:wlv_titleCenterSize="45sp"
                    app:wlv_waveAmplitude="60"
                    app:wlv_waveColor="@color/colorSecondaryDark"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                          android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                          android:id="@+id/linearLayout7" app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
                          android:layout_marginEnd="8dp">
                <TextView
                        android:textStyle="bold"
                        android:text="@string/remaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"/>
                <TextView
                        android:textStyle="bold"
                        android:text="@string/_1100_ml"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/remainingIntake"/>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                          app:layout_constraintStart_toEndOf="@+id/linearLayout7" android:layout_marginStart="8dp"
                          android:id="@+id/linearLayout8">
                <TextView
                        android:textStyle="bold"
                        android:text="@string/target"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12"/>
                <TextView
                        android:text="@string/_3100_ml"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/targetIntake"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/intake_report"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/titleTextView"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/summary"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summaryHeadingTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/chart"/>

</androidx.constraintlayout.widget.ConstraintLayout>